syntax = "proto3";

option go_package = "github.com/toledoom/poc/proto/battle";

package battle;

service Battle {
  rpc StartBattle (StartBattleRequest) returns (StartBattleResponse) {}
  rpc FinishBattle (FinishBattleRequest) returns (FinishBattleResponse) {}
}

message StartBattleRequest {
  string playerId1 = 1;
  string playerId2 = 2;
}

message StartBattleResponse {
  string battleId = 1;
}

message FinishBattleRequest {
  string battleId = 1;
  string winnerId = 2;
}

message FinishBattleResponse {
  int64 player1Score = 1;
  int64 player2Score = 2;
}