syntax = "proto3";

option go_package = "github.com/toledoom/poc/proto/leaderboard";

package leaderboard;

service Leaderboard {
  rpc GetRank (GetRankRequest) returns (GetRankResponse) {}
  rpc GetTopPlayers (GetTopPlayersRequest) returns (GetTopPlayersResponse) {}
}

message GetRankRequest {
    string playerId = 1;
}

message GetRankResponse {
    int64 rank = 1;
}

message GetTopPlayersRequest {
    int64 numPlayers = 1;
}

message GetTopPlayersResponse {
    repeated Member memberList = 1;
}

message Member {
    string id = 1;
    int64 score = 2;
}