syntax = "proto3";

option go_package = "github.com/toledoom/poc/proto/player";

package player;

service Player {
  rpc CreatePlayer (CreatePlayerRequest) returns (CreatePlayerResponse) {}
  rpc GetPlayerById (GetPlayerByIdRequest) returns (GetPlayerByIdResponse) {}
}

message CreatePlayerRequest {
    string id = 1;
    string name = 2;
}

message CreatePlayerResponse {
}

message GetPlayerByIdRequest {
    string id = 1;
}

message GetPlayerByIdResponse {
    string name = 1;
    int64 score = 2;
}